--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <title>Init Map With Leaflet</title>
   <link rel="stylesheet" type="text/css" href="css/leaflet.css">
   <style type="text/css">
-    #map{
+    html,body{
+      padding: 0;
+      margin: 0;
+    }
+    html,body,#map{
+      height: 100%;
       width: 100%;
-      height: 700px;
       background-color: #b5d0d0;
     }
   </style>
