--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
 <body>
   <div id="map"></div>
   <script type="text/javascript" src="javascript/leaflet.js"></script>
-  <script type="text/javascript">
-  var map = L.map('map').setView([22.53,114.03],12);
-  L.tileLayer('https://{s}.tiles.mapbox.com/v3/{id}/{z}/{x}/{y}.png',{
-    maxZoom: 18,
-    id: 'examples.map-i875mjb7'
-  }).addTo(map);
-  </script>
+  <script type="text/javascript" src="javascript/map.js"></script>
 </body>
 </html>
