--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
   <div id="map"></div>
+  <script type="text/javascript" src="javascript/jquery-2.1.1.js"></script>
   <script type="text/javascript" src="javascript/leaflet.js"></script>
   <script type="text/javascript" src="javascript/map.js"></script>
 </body>
