--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Init Map With Leaflet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <link rel="stylesheet" type="text/css" href="css/leaflet.css">
   <style type="text/css">
     html,body{
