--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <div id="map"></div>
   <script type="text/javascript" src="javascript/jquery-2.1.1.js"></script>
   <script type="text/javascript" src="javascript/leaflet.js"></script>
+  <script type="text/javascript" src="javascript/leaflet-heat.js"></script>
   <script type="text/javascript" src="javascript/map.js"></script>
 </body>
 </html>
