--- a/heatmap_demo/index.html
+++ b/heatmap_demo/index.html
@@ -21,7 +21,8 @@
   <div id="map"></div>
   <script type="text/javascript" src="javascript/jquery-2.1.1.js"></script>
   <script type="text/javascript" src="javascript/leaflet.js"></script>
-  <script type="text/javascript" src="javascript/leaflet-heat.js"></script>
+  <script type="text/javascript" src="javascript/heatmap.min.js"></script>
+  <script type="text/javascript" src="javascript/leaflet-heatmap.js"></script>
   <script type="text/javascript" src="javascript/map.js"></script>
 </body>
 </html>
